Feature/dev-blog-blog_tags: add categories

--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -12,6 +12,7 @@ en:
       category:
         name: 'Title'
         parent_id: 'Parent category'
+        category: 'Category'
     errors:
       messages:
         blank: "can't be blank"
