--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -12,6 +12,7 @@ ru:
       category:
         name: 'Название'
         parent_id: 'Категория родитель'
+        category: 'Категория'
     errors:
       messages:
         blank: 'не может быть пустым'
