Dev-blog-blog_policy: add policy for posts and categories

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,4 +1,20 @@
 ru:
+  home:
+    hello: 'Привет, неопознанный прохожий!'
+  pundit:
+    not_logged: 'Залогинтесь!'
+    default: 'Вы не можете выполнить это действие.'
+    post_policy:
+      update?: 'Вы не можете редактировать статью!'
+      create?: 'Вы не можете создавать статьи!'
+      delete?: 'Вы не можете удалять статьи!'
+    category_policy:
+      update?: 'Вы не можете редактировать категорию!'
+      create?: 'Вы не можете создавать категории!'
+      delete?: 'Вы не можете удалять категории!'
+  time:
+    formats:
+      long: "%Y-%m-%d %H:%M:%S"
   common:
     errors: "Ошибки"
   tags:
@@ -51,6 +67,7 @@ ru:
       error: "Ошибка установки текущей локали!"
       update_success: "Локаль обновлена."
   navigation:
+    info: "Состояние"
     login: "Вход"
     logout: "Выход"
     about: "О приложении"
