--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,17 @@
 en:
+  home:
+    hello: 'Hello, unidentified passerby!'
+  pundit:
+    not_logged: 'Must be logged in!'
+    default: 'You cannot perform this action.'
+    post_policy:
+      update?: 'You cannot edit this post!'
+      create?: 'You cannot create posts!'
+      delete?: 'You cannot delete posts!'
+    category_policy:
+      update?: 'You cannot edit this category!'
+      create?: 'You cannot create categories!'
+      delete?: 'You cannot delete categories!'
   common:
     errors: "Errors"
   tags:
@@ -51,6 +64,7 @@ en:
       error: "Error setting current locale!"
       update_success: "Locale was updated."
   navigation:
+    info: "State"
     login: "Sign in"
     logout: "Sign out"
     about: "About"
