Feature/dev-blog-blog_grypt: crypt for post:title, summary, body

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,8 @@
 en:
+  crypt:
+    encrypt_error: 'Coding error!'
+    decrypt_error: 'Decoding error!'
+    articles_decrypt_error: 'Articles decoding error!'
   home:
     hello: 'Hello, unidentified passerby!'
   pundit:
