Build/dev-chat: add resourses room and room_message

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -93,6 +93,7 @@ ru:
     brand: "LightSoft"
     help: "Помощь"
     blog: "Блог"
+    chat: "Чат"
   devise:
     titles:
       signup: "Зарегистрироваться"
